--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en" ng-app="tipCalculator">
 <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <title>Tip Calculator Demo</title>
     
     <link rel="stylesheet" type="text/css" href="css/dx.common.css" />
